VQ-2351:Ability to View Required documents screen

--- a/src/assets/i18n/cn.json
+++ b/src/assets/i18n/cn.json
@@ -627,87 +627,86 @@
       "quotation_summary": "报价摘要",
       "provide_reason_for_cancellation": "请提供取消的原因",
       "reason": "原因",
-
       "quotation_risk_detail": "报价：风险部分详细信息",
-  "insured": "被保险人",
-  "subclass": "子类",
-  "vehicle_make": "车辆制造商",
-  "vehicle_model": "车型",
-  "risk_description": "风险描述",
-  "premium_band": "保费档",
-  "schedule_details": "日程详情",
-  "reg_no": "注册号",
-  "cubic_capacity": "立方容量",
-  "seating_capacity": "座位容量",
-  "body_type": "车身类型",
-  "no_data_to_display": "没有数据可显示。",
-  "edit_motor_private_details": "编辑私人汽车详情",
-  "chasis_number": "车架号",
-  "age": "年龄",
-  "registration_number": "注册号",
-  "item_no": "项目号",
-  "colour": "颜色",
-  "engine_no": "发动机号",
-  "terrorism_applicable": "适用恐怖主义",
-  "logbook_no": "登记簿号",
-  "security_device_1": "安全装置1",
-  "motor_accessories": "汽车配件",
-  "model": "型号",
-  "security_device": "安全装置",
-  "regular_driver_name": "常驻驾驶员姓名",
-  "sch_active": "SCH激活",
-  "licence_no": "许可证号",
-  "driver_licence_date": "驾驶员驾照日期",
-  "driver_sms_no": "驾驶员短信号码",
-  "driver_relation_insured": "驾驶员与被保险人的关系",
-  "driver_email_address": "驾驶员电子邮件地址",
-  "clear": "清除",
-  "save_details": "保存详情",
-  "are_you_sure_you_want_to_delete_schedule": "您确定要删除此日程吗",
-  "no_im_not": "不，我不是",
-  "yes_delete": "是的，删除",
-  "other_details": "其他详情",
-  "import_files": "导入文件",
-  "add_other_details": "添加其他详情",
-  "code": "代码",
-  "geographical_limits": "地理限制",
-  "deductible_desc": "免赔额说明",
-  "deductible_description": "免赔额描述",
-  "limitation_use": "使用限制",
-  "authorized_driver": "授权驾驶员",
-  "edit_Other_details": "编辑其他详细信息",
-  "third": "第三",
-  "section_details": "部分详情",
-  "risk_sections": "风险部分",
-  "edit_risk_section_details": "编辑风险部分详情",
-  "id": "身份证",
-  "rate_type": "费率类型",
-  "premium_type": "保费类型",
-  "limit_amount": "限额",
-  "group": "组",
-  "premium_rate": "保费率",
-  "div_by": "除以",
-  "multi_rate": "多重率",
-  "div_multi_by": "多重除以",
-  "minimum_premium": "最低保费",
-  "accumulation": "积累",
-  "remarks": "备注",
-  "declaration": "声明",
-  "are_you_sure_you_want_to_delete_section": "您确定要删除此部分吗",
-  "row_num": "行数",
-  "short_description": "简要描述",
-  "risk_clauses": "风险条款",
-  "select": "选择",
-  "heading": "标题",
-  "wording": "措辞",
-  "editable": "可编辑",
-  "assign_task": "分配任务",
-  "next": "下一步",
-  "fixed": "固定",
-  "recursive": "递归",
-  "rate_table": "费率表",
-  "absolute_range": "绝对范围",
-  "step_ranges": "阶梯范围"
+      "insured": "被保险人",
+      "subclass": "子类",
+      "vehicle_make": "车辆制造商",
+      "vehicle_model": "车型",
+      "risk_description": "风险描述",
+      "premium_band": "保费档",
+      "schedule_details": "日程详情",
+      "reg_no": "注册号",
+      "cubic_capacity": "立方容量",
+      "seating_capacity": "座位容量",
+      "body_type": "车身类型",
+      "no_data_to_display": "没有数据可显示。",
+      "edit_motor_private_details": "编辑私人汽车详情",
+      "chasis_number": "车架号",
+      "age": "年龄",
+      "registration_number": "注册号",
+      "item_no": "项目号",
+      "colour": "颜色",
+      "engine_no": "发动机号",
+      "terrorism_applicable": "适用恐怖主义",
+      "logbook_no": "登记簿号",
+      "security_device_1": "安全装置1",
+      "motor_accessories": "汽车配件",
+      "model": "型号",
+      "security_device": "安全装置",
+      "regular_driver_name": "常驻驾驶员姓名",
+      "sch_active": "SCH激活",
+      "licence_no": "许可证号",
+      "driver_licence_date": "驾驶员驾照日期",
+      "driver_sms_no": "驾驶员短信号码",
+      "driver_relation_insured": "驾驶员与被保险人的关系",
+      "driver_email_address": "驾驶员电子邮件地址",
+      "clear": "清除",
+      "save_details": "保存详情",
+      "are_you_sure_you_want_to_delete_schedule": "您确定要删除此日程吗",
+      "no_im_not": "不，我不是",
+      "yes_delete": "是的，删除",
+      "other_details": "其他详情",
+      "import_files": "导入文件",
+      "add_other_details": "添加其他详情",
+      "code": "代码",
+      "geographical_limits": "地理限制",
+      "deductible_desc": "免赔额说明",
+      "deductible_description": "免赔额描述",
+      "limitation_use": "使用限制",
+      "authorized_driver": "授权驾驶员",
+      "edit_Other_details": "编辑其他详细信息",
+      "third": "第三",
+      "section_details": "部分详情",
+      "risk_sections": "风险部分",
+      "edit_risk_section_details": "编辑风险部分详情",
+      "id": "身份证",
+      "rate_type": "费率类型",
+      "premium_type": "保费类型",
+      "limit_amount": "限额",
+      "group": "组",
+      "premium_rate": "保费率",
+      "div_by": "除以",
+      "multi_rate": "多重率",
+      "div_multi_by": "多重除以",
+      "minimum_premium": "最低保费",
+      "accumulation": "积累",
+      "remarks": "备注",
+      "declaration": "声明",
+      "are_you_sure_you_want_to_delete_section": "您确定要删除此部分吗",
+      "row_num": "行数",
+      "short_description": "简要描述",
+      "risk_clauses": "风险条款",
+      "select": "选择",
+      "heading": "标题",
+      "wording": "措辞",
+      "editable": "可编辑",
+      "assign_task": "分配任务",
+      "next": "下一步",
+      "fixed": "固定",
+      "recursive": "递归",
+      "rate_table": "费率表",
+      "absolute_range": "绝对范围",
+      "step_ranges": "阶梯范围"
     },
     "policy": {
       "underwriting_new_transaction": "核保：新交易",
@@ -862,34 +861,111 @@
       "percentage": "百分比",
       "premium": "保险费",
       "fee_rate": "费率",
-      "fee_amount": "费用金额"
+      "fee_amount": "费用金额",
+      "import_schedule": "导入时间表",
+      "from_csv_file": "从 CSV 文件",
+      "from_another_policy": "从另一政策",
+      "export_template": "导出模板",
+      "upload_template": "上传模板",
+      "underwriting_policy_summary": "核保：政策摘要",
+      "client_dd_details": "客户尽职调查详情",
+      "policy_taxes": "政策税",
+      "policy_clauses": "政策条款",
+      "policy_subclasses_clauses": "政策子类条款",
+      "policy_level_perils": "政策级别风险",
+      "policy_remarks": "政策备注",
+      "limits_of_liability": "责任限额",
+      "external_claim_exp": "外部索赔费用",
+      "internal_claim_exp": "内部索赔费用",
+      "service_providers": "服务提供商",
+      "reasons_for_pending": "待处理原因",
+      "insureds": "被保险人",
+      "Name": "姓名",
+      "address": "地址",
+      "town": "城镇",
+      "pin": "邮编",
+      "passport_no": "护照号",
+      "business": "业务",
+      "risk-note": "风险提示",
+      "description": "描述",
+      "binder_name": "保单夹名称",
+      "uw-year": "核保年份",
+      "Premium": "保费",
+      "schedule_details": "时间表详情",
+      "reg_no": "注册号",
+      "vehicle_make": "车辆品牌",
+      "cubic_capacity": "排量",
+      "year_of_manufacture": "制造年份",
+      "seating_capacity": "座位容量",
+      "value": "价值",
+      "body_type": "车身类型",
+      "premium_items": "保费项目",
+      "risk_sections": "风险部分",
+      "save_details": "保存详情",
+      "group": "组",
+      "row_no": "行号",
+      "short_desc": "简短描述",
+      "limit_amount": "限额",
+      "premium_rate": "保费率",
+      "div_factor": "分割因子",
+      "id": "ID",
+      "rate_type": "费率类型",
+      "premium_type": "保费类型",
+      "free_limit": "免费限额",
+      "div_by": "除以",
+      "multi_rate": "多费率",
+      "div-multi_by": "除-乘以",
+      "min_premium": "最低保费",
+      "accumulation": "累计",
+      "remarks": "备注",
+      "declaration": "声明",
+      "compute": "计算",
+      "dual_basis": "双重基础",
+      "indemnity_period_units": "赔偿期单位",
+      "first_indemnity": "首次赔偿",
+      "indemnity_remainder_period": "赔偿剩余期",
+      "email_pct": "电子邮件百分比",
+      "loc_division_factor": "地点分割因子",
+      "top_loc_rate": "最高地点费率",
+      "clear": "清除",
+      "risk_clauses": "风险条款",
+      "header": "标题",
+      "clause": "条款",
+      "editable": "可编辑",
+      "type": "类型",
+      "required_documents": "所需文件",
+      "submitted": "已提交",
+      "date-submitted": "提交日期",
+      "ref_no": "参考号",
+      "risk_note": "风险提示",
+      "uw_year": "核保年份"
     }
   },
   "lms": {
     "common": {},
     "ind": {
-        "causation_cause": "因果原因",
-        "causation_type": "因果类型",
-        "choose_file": "选择文件",
-        "claims": "索赔",
-        "claim_details": "索赔详情",
-        "claim_on_life": "人寿索赔",
-        "claim_type": "索赔类型",
-        "client_details": "客户详情",
-        "date_reported": "报告日期",
-        "death_certificate": "死亡证明",
-        "document_c": "文件C",
-        "document_d": "文件D",
-        "incident_date": "事件日期",
-        "incident_location": "事件地点",
-        "incubation_period": "覆盖潜伏期",
-        "national_identification": "国家身份证明",
-        "no": "否",
-        "policy": "政策",
-        "proceed": "继续",
-        "select_an_option": "选择一个选项",
-        "upload_documents": "上传文件",
-        "yes": "是"   
+      "causation_cause": "因果原因",
+      "causation_type": "因果类型",
+      "choose_file": "选择文件",
+      "claims": "索赔",
+      "claim_details": "索赔详情",
+      "claim_on_life": "人寿索赔",
+      "claim_type": "索赔类型",
+      "client_details": "客户详情",
+      "date_reported": "报告日期",
+      "death_certificate": "死亡证明",
+      "document_c": "文件C",
+      "document_d": "文件D",
+      "incident_date": "事件日期",
+      "incident_location": "事件地点",
+      "incubation_period": "覆盖潜伏期",
+      "national_identification": "国家身份证明",
+      "no": "否",
+      "policy": "政策",
+      "proceed": "继续",
+      "select_an_option": "选择一个选项",
+      "upload_documents": "上传文件",
+      "yes": "是"
     },
     "grp": {}
   },
