--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -861,7 +861,85 @@
       "percentage": "Prozentsatz",
       "premium": "Prämie",
       "fee_rate": "Gebührensatz",
-      "fee_amount": "Gebührenbetrag"
+      "fee_amount": "Gebührenbetrag",
+
+      "import_schedule": "Importplan",
+    "from_csv_file": "Aus CSV-Datei",
+    "from_another_policy": "Aus einer anderen Police",
+    "export_template": "Vorlage exportieren",
+    "upload_template": "Vorlage hochladen",
+    "underwriting_policy_summary": "Underwriting: Polizzensumme",
+    "client_dd_details": "Kunden-DD-Details",
+    "policy_taxes": "Policensteuern",
+    "policy_clauses": "Policen-Klauseln",
+    "policy_subclasses_clauses": "Policen-Unterklassen-Klauseln",
+    "policy_level_perils": "Policen-Gefahrenstufen",
+    "policy_remarks": "Policen-Bemerkungen",
+    "limits_of_liability": "Haftungshöchstgrenzen",
+    "external_claim_exp": "Externe Schadenkosten",
+    "internal_claim_exp": "Interne Schadenkosten",
+    "service_providers": "Dienstleister",
+    "Reasons for pending": "Gründe für ausstehend",
+    "insureds": "Versicherte",
+    "Name": "Name",
+    "address": "Adresse",
+    "town": "Stadt",
+    "pin": "PLZ",
+    "passport_no": "Reisepass-Nr.",
+    "business": "Geschäft",
+    "risk-note": "Risikohinweis",
+    "description": "Beschreibung",
+    "binder_name": "Binder-Name",
+    "uw-year": "Underwriting-Jahr",
+    "Premium": "Prämie",
+    "schedule_details": "Pläne-Details",
+    "reg_no": "Reg.-Nr.",
+    "vehicle_make": "Fahrzeugmarke",
+    "cubic_capacity": "Hubraum",
+    "year_of_manufacture": "Baujahr",
+    "seating_capacity": "Sitzplatzkapazität",
+    "value": "Wert",
+    "body_type": "Karosserietyp",
+    "premium_items": "Prämienartikel",
+    "risk_sections": "Risikobereiche",
+    "save_details": "Details speichern",
+    "group": "Gruppe",
+    "row_no": "Zeilennummer",
+    "short_desc": "Kurzbeschreibung",
+    "limit_amount": "Betragsgrenze",
+    "premium_rate": "Prämienrate",
+    "div_factor": "Div-Faktor",
+    "id": "ID",
+    "rate_type": "Ratentyp",
+    "premium_type": "Prämientyp",
+    "free_limit": "Freigrenze",
+    "div_by": "Geteilt durch",
+    "multi_rate": "Mehrfachrate",
+    "div-multi_by": "Div-Multi durch",
+    "min_premium": "Mindestprämie",
+    "accumulation": "Akkumulation",
+    "remarks": "Bemerkungen",
+    "declaration": "Erklärung",
+    "compute": "Berechnen",
+    "dual_basis": "Duale Basis",
+    "indemnity_period_units": "Entschädigungszeiteinheiten",
+    "first_indemnity": "Erste Entschädigung",
+    "indemnity_remainder_period": "Restliche Entschädigungsperiode",
+    "email_pct": "E-Mail-Prozentsatz",
+    "loc_division_factor": "Standort-Teilungsfaktor",
+    "top_loc_rate": "Höchster Standort-Satz",
+    "clear": "Löschen",
+    "risk_clauses": "Risiko-Klauseln",
+    "header": "Überschrift",
+    "clause": "Klausel",
+    "editable": "Editierbar",
+    "type": "Typ",
+    "required_documents": "Erforderliche Dokumente",
+    "submitted": "Eingereicht",
+    "date-submitted": "Eingereichtes Datum",
+    "ref_no": "Referenznummer",
+     "risk_note": "Risikohinweis",
+    "uw_year": "Underwriting-Jahr"
     }
   },
   "lms": {
