--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -872,7 +872,81 @@
       "from_another_policy":"From another policy",
       "export_template":"Export template",
       "upload_template":"Upload template",
-      "underwriting_policy_summary":"Underwriting:Policy Summary"
+      "underwriting_policy_summary":"Underwriting:Policy Summary",
+
+      "client_dd_details":"Client DD details",
+      "policy_taxes": "Policy taxes",
+      "policy_clauses": "Policy clauses",
+      "policy_subclasses_clauses": "Policy subclasses clauses",
+      "policy_level_perils": "Policy level perils",
+      "policy_remarks":"Policy remarks",
+      "limits_of_liability":"Limits of liability",
+      "external_claim_exp": "External claims exp.",
+      "internal_claim_exp": "Internal claims exp.",
+      "service_providers": "Service providers",
+      "reasons_for_pending": "Reasons for pending",
+      "insureds": "Insureds",
+      "Name" : "Name",
+      "address": "Address",
+      "town": "Town",
+      "pin": "Pin",
+      "passport_no": "Passport no.",
+      "business":"Business",
+      "risk-note":"Risk note",
+      "description":"Description",
+      "binder_name":"Binder name",
+      "uw-year": "UW year",
+      "Premium": "Premium",
+      "schedule_details":"Schedule details",
+      "reg_no":"Reg no.",
+      "vehicle_make":"Vehicle make",
+      "cubic_capacity":"Cubic capacity",
+      "year_of_manufacture":"Year of manufacture",
+      "seating_capacity":"Seating capacity",
+      "value":"Value",
+      "body_type":"Body type",
+      "premium_items": "Premium Items",
+      "risk_sections":"Risk Sections",
+      "save_details":"Save details",
+      "group":"Group",
+      "row_no":"Row No.",
+      "short_desc": "Short desc",
+      "limit_amount": "Limit amount",
+      "premium_rate": "Premium rate",
+      "div_factor": "Div Factor",
+      "id":"ID",
+      "rate_type": "Rate type",
+      "premium_type": "Premium type",
+      "free_limit": "Free limit",
+      "div_by":"Div By",
+      "multi_rate":"Multi rate",
+      "div-multi_by":"Div multi by",
+      "min_premium": "Min premium",
+      "accumulation": "Accumulation",
+      "remarks":"Remarks",
+      "declaration":"Declaration",
+      "compute":"Compute",
+      "dual_basis":"Dual basis",
+      "indemnity_period_units": "Indemnity period units",
+      "first_indemnity":"First indemnity",
+      "indemnity_remainder_period": "Indemnity remainder period",
+      "email_pct":"Email pct",
+      "loc_division_factor":"Loc division factor",
+      "top_loc_rate":"Top loc rate",
+      "clear":"Clear",
+      "risk_clauses":"Risk clauses",
+      "header":"Header",
+      "clause":"Clause",
+      "editable":"Editable",
+      "type": "Type",
+      "required_documents":"Required documents",
+      "submitted": "Submitted",
+      "date-submitted": "Date Submitted",
+      "ref_no":"Ref no.",
+      
+      "risk_note": "Risk note",
+      "uw_year": "UW year"
+
     }
   },
   "lms": {
