--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -604,7 +604,6 @@
       "whatsapp": "WhatsApp",
       "client_name": "Nom du Client",
       "send": "Envoyer",
-
       "quote_details": "Détails du Devis",
       "quote_number": "Numéro de Devis",
       "quote_date": "Date de devis",
@@ -628,87 +627,86 @@
       "quotation_summary": "Devis: Résumé du devis",
       "provide_reason_for_cancellation": "Veuillez fournir une raison pour votre annulation",
       "reason": "Raison",
-
       "quotation_risk_detail": "Détails de la section des risques de devis",
-  "insured": "Assuré",
-  "subclass": "Sous-classe",
-  "vehicle_make": "Marque du véhicule",
-  "vehicle_model": "Modèle du véhicule",
-  "risk_description": "Description du risque",
-  "premium_band": "Tranche de prime",
-  "schedule_details": "Détails de l'horaire",
-  "reg_no": "N° d'immatriculation",
-  "cubic_capacity": "Capacité cubique",
-  "seating_capacity": "Capacité d'assise",
-  "body_type": "Type de carrosserie",
-  "no_data_to_display": "Aucune donnée à afficher.",
-  "edit_motor_private_details": "Modifier les détails du moteur privé",
-  "chasis_number": "Numéro de châssis",
-  "age": "Âge",
-  "registration_number": "N° d'immatriculation",
-  "item_no": "N° d'article",
-  "colour": "Couleur",
-  "engine_no": "N° de moteur",
-  "terrorism_applicable": "Applicable au terrorisme",
-  "logbook_no": "N° de carnet de bord",
-  "security_device_1": "Dispositif de sécurité 1",
-  "motor_accessories": "Accessoires pour moteur",
-  "model": "Modèle",
-  "security_device": "Dispositif de sécurité",
-  "regular_driver_name": "Nom du conducteur habituel",
-  "sch_active": "SCH actif",
-  "licence_no": "N° de licence",
-  "driver_licence_date": "Date de délivrance du permis de conduire",
-  "driver_sms_no": "N° de SMS du conducteur",
-  "driver_relation_insured": "Relation du conducteur assuré",
-  "driver_email_address": "Adresse e-mail du conducteur",
-  "clear": "Effacer",
-  "save_details": "Enregistrer les détails",
-  "are_you_sure_you_want_to_delete_schedule": "Êtes-vous sûr de vouloir supprimer ce planning ?",
-  "no_im_not": "Non, je ne le suis pas",
-  "yes_delete": "Oui, supprimer",
-  "other_details": "Autres détails",
-  "import_files": "Importer des fichiers",
-  "add_other_details": "Ajouter d'autres détails",
-  "code": "Code",
-  "geographical_limits": "Limites géographiques",
-  "deductible_desc": "Description de la franchise",
-  "deductible_description": "Description de la franchise",
-  "limitation_use": "Utilisation limitée",
-  "authorized_driver": "Conducteur autorisé",
-  "edit_Other_details": "Modifier les autres détails",
-  "third": "Tiers",
-  "section_details": "Détails de la section",
-  "risk_sections": "Sections de risque",
-  "edit_risk_section_details": "Modifier les détails de la section de risque",
-  "id": "ID",
-  "rate_type": "Type de taux",
-  "premium_type": "Type de prime",
-  "limit_amount": "Montant limite",
-  "group": "Groupe",
-  "premium_rate": "Taux de prime",
-  "div_by": "Divisé par",
-  "multi_rate": "Taux multiple",
-  "div_multi_by": "Divisé par multiple",
-  "minimum_premium": "Prime minimum",
-  "accumulation": "Accumulation",
-  "remarks": "Remarques",
-  "declaration": "Déclaration",
-  "are_you_sure_you_want_to_delete_section": "Êtes-vous sûr de vouloir supprimer cette section ?",
-  "row_num": "Numéro de ligne",
-  "short_description": "Description courte",
-  "risk_clauses": "Clauses de risque",
-  "select": "Sélectionner",
-  "heading": "Titre",
-  "wording": "Libellé",
-  "editable": "Modifiable",
-  "assign_task": "Assigner une tâche",
-  "next": "Suivant",
-  "fixed": "Fixé",
-  "recursive": "Récursif",
-  "rate_table": "Tableau des Tarifs",
-  "absolute_range": "Plage Absolue",
-  "step_ranges": "Plages d'Étapes"
+      "insured": "Assuré",
+      "subclass": "Sous-classe",
+      "vehicle_make": "Marque du véhicule",
+      "vehicle_model": "Modèle du véhicule",
+      "risk_description": "Description du risque",
+      "premium_band": "Tranche de prime",
+      "schedule_details": "Détails de l'horaire",
+      "reg_no": "N° d'immatriculation",
+      "cubic_capacity": "Capacité cubique",
+      "seating_capacity": "Capacité d'assise",
+      "body_type": "Type de carrosserie",
+      "no_data_to_display": "Aucune donnée à afficher.",
+      "edit_motor_private_details": "Modifier les détails du moteur privé",
+      "chasis_number": "Numéro de châssis",
+      "age": "Âge",
+      "registration_number": "N° d'immatriculation",
+      "item_no": "N° d'article",
+      "colour": "Couleur",
+      "engine_no": "N° de moteur",
+      "terrorism_applicable": "Applicable au terrorisme",
+      "logbook_no": "N° de carnet de bord",
+      "security_device_1": "Dispositif de sécurité 1",
+      "motor_accessories": "Accessoires pour moteur",
+      "model": "Modèle",
+      "security_device": "Dispositif de sécurité",
+      "regular_driver_name": "Nom du conducteur habituel",
+      "sch_active": "SCH actif",
+      "licence_no": "N° de licence",
+      "driver_licence_date": "Date de délivrance du permis de conduire",
+      "driver_sms_no": "N° de SMS du conducteur",
+      "driver_relation_insured": "Relation du conducteur assuré",
+      "driver_email_address": "Adresse e-mail du conducteur",
+      "clear": "Effacer",
+      "save_details": "Enregistrer les détails",
+      "are_you_sure_you_want_to_delete_schedule": "Êtes-vous sûr de vouloir supprimer ce planning ?",
+      "no_im_not": "Non, je ne le suis pas",
+      "yes_delete": "Oui, supprimer",
+      "other_details": "Autres détails",
+      "import_files": "Importer des fichiers",
+      "add_other_details": "Ajouter d'autres détails",
+      "code": "Code",
+      "geographical_limits": "Limites géographiques",
+      "deductible_desc": "Description de la franchise",
+      "deductible_description": "Description de la franchise",
+      "limitation_use": "Utilisation limitée",
+      "authorized_driver": "Conducteur autorisé",
+      "edit_Other_details": "Modifier les autres détails",
+      "third": "Tiers",
+      "section_details": "Détails de la section",
+      "risk_sections": "Sections de risque",
+      "edit_risk_section_details": "Modifier les détails de la section de risque",
+      "id": "ID",
+      "rate_type": "Type de taux",
+      "premium_type": "Type de prime",
+      "limit_amount": "Montant limite",
+      "group": "Groupe",
+      "premium_rate": "Taux de prime",
+      "div_by": "Divisé par",
+      "multi_rate": "Taux multiple",
+      "div_multi_by": "Divisé par multiple",
+      "minimum_premium": "Prime minimum",
+      "accumulation": "Accumulation",
+      "remarks": "Remarques",
+      "declaration": "Déclaration",
+      "are_you_sure_you_want_to_delete_section": "Êtes-vous sûr de vouloir supprimer cette section ?",
+      "row_num": "Numéro de ligne",
+      "short_description": "Description courte",
+      "risk_clauses": "Clauses de risque",
+      "select": "Sélectionner",
+      "heading": "Titre",
+      "wording": "Libellé",
+      "editable": "Modifiable",
+      "assign_task": "Assigner une tâche",
+      "next": "Suivant",
+      "fixed": "Fixé",
+      "recursive": "Récursif",
+      "rate_table": "Tableau des Tarifs",
+      "absolute_range": "Plage Absolue",
+      "step_ranges": "Plages d'Étapes"
     },
     "policy": {
       "underwriting_new_transaction": "Souscription : Nouvelle transaction",
@@ -843,7 +841,6 @@
       "quake_flood_zone": "Zone de tremblement de terre/inondation",
       "relational_group": "Groupe relationnel",
       "risk_class": "Classe de risque",
-
       "underwriting_coinsurance_details": "Détails de la Coassurance en Souscription",
       "coinsurance_details": "Détails de la Coassurance",
       "coinsurance_leader": "Leader de la Coassurance",
@@ -864,7 +861,86 @@
       "percentage": "Pourcentage",
       "premium": "Prime",
       "fee_rate": "Taux de Frais",
-      "fee_amount": "Montant des Frais"
+      "fee_amount": "Montant des Frais",
+
+    
+      "import_schedule": "Importer le calendrier",
+      "from_csv_file": "Depuis le fichier CSV",
+      "from_another_policy": "Depuis une autre police",
+      "export_template": "Exporter le modèle",
+      "upload_template": "Télécharger le modèle",
+      "underwriting_policy_summary": "Souscription : Résumé de la police",
+      "client_dd_details": "Détails du client DD",
+      "policy_taxes": "Taxes de la police",
+      "policy_clauses": "Clauses de la police",
+      "policy_subclasses_clauses": "Clauses des sous-classes de la police",
+      "policy_level_perils": "Risques au niveau de la police",
+      "policy_remarks": "Remarques sur la police",
+      "limits_of_liability": "Limites de responsabilité",
+      "external_claim_exp": "Frais de réclamations externes",
+      "internal_claim_exp": "Frais de réclamations internes",
+      "service_providers": "Fournisseurs de services",
+      "reasons_for_pending": "Raisons en attente",
+      "insureds": "Assurés",
+      "Name": "Nom",
+      "address": "Adresse",
+      "town": "Ville",
+      "pin": "Code postal",
+      "passport_no": "Numéro de passeport",
+      "business": "Entreprise",
+      "risk-note": "Note de risque",
+      "description": "Description",
+      "binder_name": "Nom du classeur",
+      "uw-year": "Année de souscription",
+      "Premium": "Prime",
+      "schedule_details": "Détails du calendrier",
+      "reg_no": "Numéro d'enregistrement",
+      "vehicle_make": "Marque du véhicule",
+      "cubic_capacity": "Cylindrée",
+      "year_of_manufacture": "Année de fabrication",
+      "seating_capacity": "Capacité d'accueil",
+      "value": "Valeur",
+      "body_type": "Type de carrosserie",
+      "premium_items": "Éléments de prime",
+      "risk_sections": "Sections de risque",
+      "save_details": "Enregistrer les détails",
+      "group": "Groupe",
+      "row_no": "Numéro de ligne",
+      "short_desc": "Brève description",
+      "limit_amount": "Montant limite",
+      "premium_rate": "Taux de prime",
+      "div_factor": "Facteur de division",
+      "id": "ID",
+      "rate_type": "Type de taux",
+      "premium_type": "Type de prime",
+      "free_limit": "Limite gratuite",
+      "div_by": "Diviser par",
+      "multi_rate": "Taux multiple",
+      "div-multi_by": "Diviser-multiplier par",
+      "min_premium": "Prime minimale",
+      "accumulation": "Accumulation",
+      "remarks": "Remarques",
+      "declaration": "Déclaration",
+      "compute": "Calculer",
+      "dual_basis": "Base double",
+      "indemnity_period_units": "Unités de la période d'indemnisation",
+      "first_indemnity": "Première indemnisation",
+      "indemnity_remainder_period": "Période restante d'indemnisation",
+      "email_pct": "Pourcentage de courriel",
+      "loc_division_factor": "Facteur de division du lieu",
+      "top_loc_rate": "Taux supérieur du lieu",
+      "clear": "Effacer",
+      "risk_clauses": "Clauses de risque",
+      "header": "En-tête",
+      "clause": "Clause",
+      "editable": "Modifiable",
+      "type": "Type",
+      "required_documents": "Documents requis",
+      "submitted": "Soumis",
+      "date-submitted": "Date de soumission",
+      "ref_no": "Numéro de référence",
+      "risk_note": "Note de risque",
+    "uw_year": "Année de souscription"
     }
   },
   "lms": {
