--- a/src/assets/i18n/ke.json
+++ b/src/assets/i18n/ke.json
@@ -864,7 +864,85 @@
       "percentage": "Asilimia",
       "premium": "Ada ya Bima",
       "fee_rate": "Kiwango cha Ada",
-      "fee_amount": "Kiasi cha Ada"
+      "fee_amount": "Kiasi cha Ada",
+
+      "import_schedule": "Ingiza ratiba",
+      "from_csv_file": "Kutoka faili ya CSV",
+      "from_another_policy": "Kutoka sera nyingine",
+      "export_template": "Hamisha kiolezo",
+      "upload_template": "Pakia kiolezo",
+      "underwriting_policy_summary": "Uhakiki: Muhtasari wa sera",
+      "client_dd_details": "Maelezo ya mteja DD",
+      "policy_taxes": "Kodi za sera",
+      "policy_clauses": "Vifungu vya sera",
+      "policy_subclasses_clauses": "Vifungu vya madarasa madogo ya sera",
+      "policy_level_perils": "Hatari za kiwango cha sera",
+      "policy_remarks": "Maoni ya sera",
+      "limits_of_liability": "Mipaka ya dhima",
+      "external_claim_exp": "Gharama za madai ya nje",
+      "internal_claim_exp": "Gharama za madai ya ndani",
+      "service_providers": "Watoa huduma",
+      "reasons_for_pending": "Sababu za kusubiri",
+      "insureds": "Bima",
+      "Name": "Jina",
+      "address": "Anwani",
+      "town": "Mji",
+      "pin": "Namba ya posta",
+      "passport_no": "Namba ya pasipoti",
+      "business": "Biashara",
+      "risk-note": "Kumbuka hatari",
+      "description": "Maelezo",
+      "binder_name": "Jina la bindo",
+      "uw-year": "Mwaka wa uhakiki",
+      "Premium": "Ada",
+      "schedule_details": "Maelezo ya ratiba",
+      "reg_no": "Namba ya usajili",
+      "vehicle_make": "Aina ya gari",
+      "cubic_capacity": "Uwezo wa ujazo",
+      "year_of_manufacture": "Mwaka wa utengenezaji",
+      "seating_capacity": "Uwezo wa kuketi",
+      "value": "Thamani",
+      "body_type": "Aina ya mwili",
+      "premium_items": "Vitu vya ada",
+      "risk_sections": "Sehemu za hatari",
+      "save_details": "Hifadhi maelezo",
+      "group": "Kikundi",
+      "row_no": "Namba ya safu",
+      "short_desc": "Maelezo mafupi",
+      "limit_amount": "Kiwango cha juu",
+      "premium_rate": "Kiwango cha ada",
+      "div_factor": "Kipengele cha kugawanya",
+      "id": "ID",
+      "rate_type": "Aina ya kiwango",
+      "premium_type": "Aina ya ada",
+      "free_limit": "Kiwango cha bure",
+      "div_by": "Gawa kwa",
+      "multi_rate": "Kiwango kingi",
+      "div-multi_by": "Gawa-kingi kwa",
+      "min_premium": "Ada ya chini",
+      "accumulation": "Mkopo",
+      "remarks": "Maoni",
+      "declaration": "Tamko",
+      "compute": "Hesabu",
+      "dual_basis": "Msingi wa pande mbili",
+      "indemnity_period_units": "Vipimo vya kipindi cha fidia",
+      "first_indemnity": "Fidia ya kwanza",
+      "indemnity_remainder_period": "Kipindi kilichobaki cha fidia",
+      "email_pct": "Asilimia ya barua pepe",
+      "loc_division_factor": "Kipengele cha mgawanyiko wa eneo",
+      "top_loc_rate": "Kiwango cha juu cha eneo",
+      "clear": "Futa",
+      "risk_clauses": "Vifungu vya hatari",
+      "header": "Kichwa",
+      "clause": "Kifungu",
+      "editable": "Inayohaririwa",
+      "type": "Aina",
+      "required_documents": "Hati zinazohitajika",
+      "submitted": "Imewasilishwa",
+      "date-submitted": "Tarehe ya kuwasilishwa",
+      "ref_no": "Namba ya kumbukumbu",
+        "risk_note": "Kipande cha hatari",
+    "uw_year": "Mwaka wa uhakiki"
     }
   },
   "lms": {
