--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -861,7 +861,85 @@
       "percentage": "Porcentaje",
       "premium": "Prima",
       "fee_rate": "Tasa de Tarifa",
-      "fee_amount": "Cantidad de Tarifa"
+      "fee_amount": "Cantidad de Tarifa",
+
+      "import_schedule": "Importar horario",
+    "from_csv_file": "Desde archivo CSV",
+    "from_another_policy": "Desde otra póliza",
+    "export_template": "Exportar plantilla",
+    "upload_template": "Subir plantilla",
+    "underwriting_policy_summary": "Suscripción: Resumen de la póliza",
+    "client_dd_details": "Detalles del cliente DD",
+    "policy_taxes": "Impuestos de la póliza",
+    "policy_clauses": "Cláusulas de la póliza",
+    "policy_subclasses_clauses": "Cláusulas de subclases de la póliza",
+    "policy_level_perils": "Riesgos a nivel de póliza",
+    "policy_remarks": "Comentarios de la póliza",
+    "limits_of_liability": "Límites de responsabilidad",
+    "external_claim_exp": "Gastos de reclamaciones externas",
+    "internal_claim_exp": "Gastos de reclamaciones internas",
+    "service_providers": "Proveedores de servicios",
+    "reasons_for_pending": "Razones pendientes",
+    "insureds": "Asegurados",
+    "Name": "Nombre",
+    "address": "Dirección",
+    "town": "Ciudad",
+    "pin": "Código postal",
+    "passport_no": "Número de pasaporte",
+    "business": "Negocio",
+    "risk-note": "Nota de riesgo",
+    "description": "Descripción",
+    "binder_name": "Nombre del archivador",
+    "uw-year": "Año de suscripción",
+    "Premium": "Prima",
+    "schedule_details": "Detalles del horario",
+    "reg_no": "Número de registro",
+    "vehicle_make": "Marca del vehículo",
+    "cubic_capacity": "Capacidad cúbica",
+    "year_of_manufacture": "Año de fabricación",
+    "seating_capacity": "Capacidad de asientos",
+    "value": "Valor",
+    "body_type": "Tipo de carrocería",
+    "premium_items": "Artículos de prima",
+    "risk_sections": "Secciones de riesgo",
+    "save_details": "Guardar detalles",
+    "group": "Grupo",
+    "row_no": "Número de fila",
+    "short_desc": "Descripción corta",
+    "limit_amount": "Monto límite",
+    "premium_rate": "Tasa de prima",
+    "div_factor": "Factor de división",
+    "id": "ID",
+    "rate_type": "Tipo de tasa",
+    "premium_type": "Tipo de prima",
+    "free_limit": "Límite gratuito",
+    "div_by": "Dividir por",
+    "multi_rate": "Tasa múltiple",
+    "div-multi_by": "Dividir-multiplicar por",
+    "min_premium": "Prima mínima",
+    "accumulation": "Acumulación",
+    "remarks": "Observaciones",
+    "declaration": "Declaración",
+    "compute": "Calcular",
+    "dual_basis": "Base dual",
+    "indemnity_period_units": "Unidades del período de indemnización",
+    "first_indemnity": "Primera indemnización",
+    "indemnity_remainder_period": "Período restante de indemnización",
+    "email_pct": "Porcentaje de correo electrónico",
+    "loc_division_factor": "Factor de división de ubicación",
+    "top_loc_rate": "Tasa de ubicación superior",
+    "clear": "Borrar",
+    "risk_clauses": "Cláusulas de riesgo",
+    "header": "Encabezado",
+    "clause": "Cláusula",
+    "editable": "Editable",
+    "type": "Tipo",
+    "required_documents": "Documentos requeridos",
+    "submitted": "Enviado",
+    "date-submitted": "Fecha de envío",
+    "ref_no": "Número de referencia",
+    "risk_note": "Nota de riesgo",
+    "uw_year": "Año de suscripción"
     }
   },
   "lms": {
