--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -873,7 +873,6 @@
       "export_template":"Export template",
       "upload_template":"Upload template",
       "underwriting_policy_summary":"Underwriting:Policy Summary",
-<<<<<<< HEAD
 
       "client_dd_details":"Client DD details",
       "policy_taxes": "Policy taxes",
@@ -946,11 +945,9 @@
       "ref_no":"Ref no.",
       
       "risk_note": "Risk note",
-      "uw_year": "UW year"
+      "uw_year": "UW year",
 
-=======
       "select_risk_clauses":"Select risk clauses"
->>>>>>> b6d9997f (VQ-2345:Ability to Add Risk clause)
     }
   },
   "lms": {
